...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ListView
            android:id="@+id/listMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

    </androidx.cardview.widget.CardView>
...
        app:layout_constraintBottom_toTopOf="@+id/bottomCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardMode">

        <ListView
            android:id="@+id/listCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>


...
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="OFF"
                    />
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/tenMinuteTimerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="10 min"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toRightOf="@+id/timerOffButton"
                    app:layout_constraintRight_toLeftOf="@+id/fifteenMinuteTimerButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <Button
                    android:id="@+id/fifteenMinuteTimerButton"
...
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/fiveQuestionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="5"
                    />
                android:textSize="15sp" />

                <Button
                    android:id="@+id/tenQuestionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="10"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toRightOf="@+id/fiveQuestionButton"
                    app:layout_constraintRight_toLeftOf="@+id/fifteenQuestionButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <Button
                    android:id="@+id/fifteenQuestionButton"
...
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/startQuizButton"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="startQuiz"
...
