...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.quiz.PracticeTheoryActivity">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation">

        <LinearLayout
            android:layout_width="match_parent"
...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Progress: "
                            android:textSize="14dp" />

                        <TextView
                            android:id="@+id/questionCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="current q" />

                    </LinearLayout>

...

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Timer"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/categoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="20dp"
                android:textStyle="bold" />

...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <Button
                    android:id="@+id/checkAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Check Answer"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/nextQuestionBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Next Question"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/selectQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>
...
