...
        android:layout_width="match_parent"
        android:layout_height="644dp"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/theoryCard"
            android:layout_width="360dp"
            android:layout_height="90dp"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@drawable/gradient1"
            android:clickable="true"
...
