package com.example.smartcarmqttapp;


import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.doubleClick;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isAssignableFrom;
import static androidx.test.espresso.matcher.ViewMatchers.isClickable;
import static androidx.test.espresso.matcher.ViewMatchers.isEnabled;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;

import android.view.View;
import android.widget.TextView;

import androidx.test.espresso.DataInteraction;
import androidx.test.espresso.UiController;
import androidx.test.espresso.ViewAction;
import androidx.test.espresso.ViewInteraction;
import androidx.test.espresso.action.ViewActions;
import androidx.test.espresso.matcher.ViewMatchers;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.filters.LargeTest;
import androidx.test.ext.junit.runners.AndroidJUnit4;

import org.hamcrest.Matcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class InstrumentedTest {

    @Rule
    public ActivityScenarioRule<MainActivity> mActivityTestRule = new ActivityScenarioRule<>(MainActivity.class);

    @Test
    public void mainActivityTest() {
        try {
            Thread.sleep(4000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        ViewInteraction cardView = onView(
                allOf(withId(R.id.theoryCard)));
        cardView.perform(click());


        DataInteraction linearLayout = onData(anything())
                .inAdapterView(allOf(withId(R.id.listMode)))
                .atPosition(0);
        linearLayout.perform(click());


        ViewInteraction materialButton =
        onView(withId(R.id.fifteenQuestionButton)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                new ViewAction() {
                    @Override
                    public Matcher<View> getConstraints() {
                        return ViewMatchers.isEnabled(); // no constraints, they are checked above
                    }

                    @Override
                    public String getDescription() {
                        return "click plus button";
                    }

                    @Override
                    public void perform(UiController uiController, View view) {
                        view.performClick();
                    }
                }
        );

        ViewInteraction materialButton3 = onView(
                allOf(withId(R.id.startQuizButton)));
        materialButton3.perform(click());

        assert getText(onView(withId(R.id.questionCount))).equals("1 / 15");
    }

    @Test
    public void _QuizShouldDisplayTenQuestions() {
        try {
            Thread.sleep(4000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        ViewInteraction cardView = onView(
                allOf(withId(R.id.theoryCard)));
        cardView.perform(click());


        DataInteraction linearLayout = onData(anything())
                .inAdapterView(allOf(withId(R.id.listMode)))
                .atPosition(0);
        linearLayout.perform(click());


        ViewInteraction materialButton =
                onView(withId(R.id.tenQuestionButton)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints, they are checked above
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );

        ViewInteraction materialButton1 = onView(
                allOf(withId(R.id.startQuizButton)));
        materialButton1.perform(click());

        assert getText(onView(withId(R.id.questionCount))).equals("1 / 10");

    }

    @Test
    public void _QuizShouldDisplayFiveQuestions() {
        try {
            Thread.sleep(4000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        ViewInteraction cardView = onView(
                allOf(withId(R.id.theoryCard)));
        cardView.perform(click());


        DataInteraction linearLayout = onData(anything())
                .inAdapterView(allOf(withId(R.id.listMode)))
                .atPosition(0);
        linearLayout.perform(click());


        ViewInteraction materialButton =
                onView(withId(R.id.fiveQuestionButton)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints, they are checked above
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );

        ViewInteraction materialButton2 = onView(
                allOf(withId(R.id.startQuizButton)));
        materialButton2.perform(click());

        assert getText(onView(withId(R.id.questionCount))).equals("1 / 5");
    }

    @Test
    public void _StartingTheoryExam() {
        try {
            Thread.sleep(4000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        ViewInteraction cardView = onView(
                allOf(withId(R.id.theoryCard)));
        cardView.perform(click());


        DataInteraction linearLayout = onData(anything())
                .inAdapterView(allOf(withId(R.id.listMode)))
                .atPosition(1);
        linearLayout.perform(click());

        ViewInteraction materialButton2 = onView(
                allOf(withId(R.id.startQuizButton)));
        materialButton2.perform(click());

        assert getText(onView(withId(R.id.questionCount))).equals("1 / 45");
        assert getText(onView(withId(R.id.timer))).startsWith("29:5");
    }

    @Test
    public void _SettingTenMinutes() {
        try {
            Thread.sleep(4000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        ViewInteraction cardView = onView(
                allOf(withId(R.id.theoryCard)));
        cardView.perform(click());


        DataInteraction linearLayout = onData(anything())
                .inAdapterView(allOf(withId(R.id.listMode)))
                .atPosition(0);
        linearLayout.perform(click());


        ViewInteraction materialButton =
                onView(withId(R.id.tenMinuteTimerButton)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints, they are checked above
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );

        ViewInteraction materialButton2 = onView(
                allOf(withId(R.id.startQuizButton)));
        materialButton2.perform(click());

        assert getText(onView(withId(R.id.timer))).startsWith("09:5");

    }

    @Test
    public void _FifteenQuestion_FifteenMinutes() {
        try {
            Thread.sleep(4000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        ViewInteraction cardView = onView(
                allOf(withId(R.id.theoryCard)));
        cardView.perform(click());


        DataInteraction linearLayout = onData(anything())
                .inAdapterView(allOf(withId(R.id.listMode)))
                .atPosition(0);
        linearLayout.perform(click());

        ViewInteraction materialButton2 =
                onView(withId(R.id.fifteenMinuteTimerButton)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints, they are checked above
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );


        ViewInteraction materialButton =
                onView(withId(R.id.fifteenQuestionButton)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints, they are checked above
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );


        ViewInteraction materialButton3 = onView(
                allOf(withId(R.id.startQuizButton)));
        materialButton3.perform(click());

        assert getText(onView(withId(R.id.questionCount))).equals("1 / 15");
        assert getText(onView(withId(R.id.timer))).startsWith("14:5");
    }

    @Test
    public void _SkippingQuestion() {
        try {
            Thread.sleep(4000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        ViewInteraction cardView = onView(
                allOf(withId(R.id.theoryCard)));
        cardView.perform(click());


        DataInteraction linearLayout = onData(anything())
                .inAdapterView(allOf(withId(R.id.listMode)))
                .atPosition(0);
        linearLayout.perform(click());

        ViewInteraction materialButton2 =
                onView(withId(R.id.fifteenMinuteTimerButton)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints, they are checked above
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );


        ViewInteraction materialButton =
                onView(withId(R.id.fifteenQuestionButton)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints, they are checked above
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );

        ViewInteraction materialButton3 = onView(
                allOf(withId(R.id.startQuizButton)));
        materialButton3.perform(click());

        ViewInteraction scrollView = onView(
                allOf(withId(R.id.scrollview)));
        scrollView.perform(ViewActions.swipeUp());

        ViewInteraction materialBtn =
                onView(withId(R.id.nextQuestionBTN)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints, they are checked above
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );
        materialBtn.perform(doubleClick());

        scrollView.perform(ViewActions.swipeDown());

        assert getText(onView(withId(R.id.questionCount))).equals("2 / 15");

    }

    @Test
    public void _CheckingAnswerWithoutOptionShouldDisplayMessage() {
        try {
            Thread.sleep(4000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        ViewInteraction cardView = onView(
                allOf(withId(R.id.theoryCard)));
        cardView.perform(click());


        DataInteraction linearLayout = onData(anything())
                .inAdapterView(allOf(withId(R.id.listMode)))
                .atPosition(0);
        linearLayout.perform(click());

        ViewInteraction materialButton2 =
                onView(withId(R.id.fifteenMinuteTimerButton)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints, they are checked above
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );


        ViewInteraction materialButton =
                onView(withId(R.id.fifteenQuestionButton)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints, they are checked above
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );

        ViewInteraction materialButton3 = onView(
                allOf(withId(R.id.startQuizButton)));
        materialButton3.perform(click());

        ViewInteraction scrollView = onView(
                allOf(withId(R.id.scrollview)));
        scrollView.perform(ViewActions.swipeUp());

        ViewInteraction materialButton4 =
                onView(withId(R.id.checkAnswer)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints, they are checked above
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );

        assert getText(onView(withId(R.id.selectQuestion))).equals("Select an answer or skip by pressing 'Next Question' twice");

    }

    @Test
    public void _QuizShouldDisplayBasicTrafficRulesCategory() {
        try {
            Thread.sleep(4000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        ViewInteraction cardView = onView(
                allOf(withId(R.id.theoryCard)));
        cardView.perform(click());


        DataInteraction linearLayout = onData(anything())
                .inAdapterView(allOf(withId(R.id.listMode)))
                .atPosition(0);
        linearLayout.perform(click());

        DataInteraction linearLayout2 = onData(anything())
                .inAdapterView(allOf(withId(R.id.listCategory)))
                .atPosition(0);
        linearLayout2.perform(click());

        ViewInteraction materialButton2 =
                onView(withId(R.id.fifteenMinuteTimerButton)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );


        ViewInteraction materialButton =
                onView(withId(R.id.fifteenQuestionButton)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints, they are checked above
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );

        ViewInteraction materialButton3 = onView(
                allOf(withId(R.id.startQuizButton)));
        materialButton3.perform(click());

        assert getText(onView(withId(R.id.categoryText))).equals("Basic Traffic Rules and Signs");
    }

    @Test
    public void _QuizShouldDisplaySafetyAndBestPracticesCategory() {
        try {
            Thread.sleep(4000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        ViewInteraction cardView = onView(
                allOf(withId(R.id.theoryCard)));
        cardView.perform(click());


        DataInteraction linearLayout = onData(anything())
                .inAdapterView(allOf(withId(R.id.listMode)))
                .atPosition(0);
        linearLayout.perform(click());

        DataInteraction linearLayout2 = onData(anything())
                .inAdapterView(allOf(withId(R.id.listCategory)))
                .atPosition(1);
        linearLayout2.perform(click());

        ViewInteraction materialButton2 =
                onView(withId(R.id.fifteenMinuteTimerButton)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints, they are checked above
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );


        ViewInteraction materialButton =
                onView(withId(R.id.fifteenQuestionButton)).check(matches(allOf( isEnabled(), isClickable()))).perform(
                        new ViewAction() {
                            @Override
                            public Matcher<View> getConstraints() {
                                return ViewMatchers.isEnabled(); // no constraints, they are checked above
                            }

                            @Override
                            public String getDescription() {
                                return "click plus button";
                            }

                            @Override
                            public void perform(UiController uiController, View view) {
                                view.performClick();
                            }
                        }
                );

        ViewInteraction materialButton3 = onView(
                allOf(withId(R.id.startQuizButton)));
